--- a/404.md
+++ b/404.md
@@ -1,6 +1,6 @@
 ---
 title-prefix: "Page not found"
 ---
+<div style="text-align: center">
 # 404 - Page Not Found
-
-The page you are looking for does not exist.
+</div>
