--- a/blog/1.md
+++ b/blog/1.md
@@ -24,7 +24,7 @@ Below are the aliases from my [shell rc](https://github.com/jmelahman/dotfiles/b
 I wish I used aliases more.
 
 
-```shell
+```bash
 alias gs='git status'
 alias gl="git log --graph --pretty='%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'"
 alias gb='git for-each-ref --sort=-committerdate refs/heads/'
@@ -42,7 +42,7 @@ I use this the way many people use `ls`.
 
 In addition to aliases, I have two shell functions that act like aliases,
 
-```shell
+```bash
 function ga() {
   local message="$1"
   if [ -z "$message" ]; then
