--- a/blog/2.md
+++ b/blog/2.md
@@ -6,7 +6,7 @@ nav_blog: true
 
 # Using `uv` to package Golang applications
 
-I love golang and I love uv.
+I love Golang and I love `uv`.
 
 Combining the two seems unlikely at a glance given the limited interop between Python and Go.
 Moreover, the Go ecosystem is rich with top-tier developer tools (a domain in which Go excels).
