support twitter cards

--- a/blog/2.md
+++ b/blog/2.md
@@ -1,4 +1,5 @@
 ---
+og-title: "Using `uv` to package Go applications"
 title-prefix: "Blog"
 date: 2025-08-12
 nav_blog: true
@@ -103,10 +104,10 @@ The building is in parallel, so sub-1 minute deployments are common.
 
 ### Issues with GoReleaser
 
-There are only 3 minor issues with GoReleaser,
+There are only 2, minor issues with GoReleaser,
 
 1. There isn't a ubiquitous, CLI solution for downloading these artifacts from Github.
-  a. This does imply  the platform detection is not automatic and therefore error-prone.
+a. This implies the platform detection is not automatic and therefore error-prone.
 2. They're tarballs, so installing requires un-archiving after downloading.
 
 ## Solving the last mile problem (of Go packaging)
@@ -120,7 +121,7 @@ Also, `uv` itself is [really freaking fast](https://github.com/astral-sh/uv/blob
 
 ### Packaging a Go application with Python tools
 
-Packaging with Python tools has 2 major parts:
+Packaging with Python tools has 2, major parts:
 
 - `pyproject.toml`: defines the package configurations analogous to the `go.mod` file
 - `hatch_build.py`: a custom hook to handle Go building specifics
