--- a/blog/2.md
+++ b/blog/2.md
@@ -56,21 +56,21 @@ For most use-cases, Go packaging is perfectly fine and requires minimal maintena
 the developers.
 
 For me, I am willing to trade a bit of effort for the optimal user experience; I enjoy these things.
-Also, this approach is mutually-exclusive with Go's packaging which is still available to users if
-desired..
+Also, this approach is mutually-exclusive to the default Go packaging which remains available to
+users if preferable.
 
-The majority of my complaints are really just, "Go doesn't have a canonical package repository."
+The majority of my complaints are really just, "Go doesn't have a canonical package repository":
 
-1. Installing Go packages requires installing Go
-2. Installing Go packages requires building them from source
-3. Installing Go packages requires specific versions of Go installed
+1. Installing Go packages requires Go be installed
+2. Installing Go packages requires a specific version of Go be installed
+3. Installing Go packages requires building them from source
 4. Managing Go packages lacks some reproducability features
 
 ## GoReleaser filling in the gaps
 
 If Go's default packaging is 95% complete, [GoReleaser](https://goreleaser.com/) gets it to 99%.
 GoReleaser is an absolutely phenomenal tool and I wish I had more time to use it properly.
-For most, basic Go applications, deployments are a simple Github Action workflow,
+For most, basic Go applications, deployments are a simple [Github Actions workflow](https://github.com/goreleaser/goreleaser-action?tab=readme-ov-file#usage),
 
 ```yaml
   goreleaser:
@@ -216,10 +216,10 @@ A big positive about this hook is that it's completely application agnostic.
 All of my projects share the same hook implementation.
 
 Building is a matter of `uv build --wheel`.
-You could build a source distribution (sdist), but it doesn't really make sense
+You could build a source distribution (sdist), but it doesn't really make sense.
 The output is a `.whl` file with the prebuilt Go application inside.
 
-### `manygo` and the power if small, python libraries
+### `manygo` and the power of small, python libraries
 
 Go and Python have similar semantics for platform compatibility.
 I wrote a very simple Python library to convert [Go's](https://go.dev/doc/install/source#environment) platform semantics to [Python's](https://packaging.python.org/en/latest/specifications/platform-compatibility-tags/#platform-tag) called [manygo](https://github.com/jmelahman/manygo) (a reference to Python's [manylinux](https://github.com/pypa/manylinux) wheels).
@@ -235,12 +235,12 @@ I recommend everyone make as many, small, modular libraries as they need.
 
 ### Optimizing reproducability and `go-bin`
 
-Initially, the `hatch_build.py` above invoke `go` from the command-line.
+Initially, the `hatch_build.py` above invoked `go` from the command-line.
 This was typically the user's global install.
 Moreover, builds would fail if the user did not have Go installed beforehand.
 Considering I was packaging with Python tools *because* I suspected users weren't familiar with Go, I needed a way to provide `go` to users using Python machinery.
 
-[github.com/golang/go](https://github.com/golang/go) itself is a Go app, so I can build and publish it to PyPi using the aforementioned setup.
+[github.com/golang/go](https://github.com/golang/go) itself is a Go app, so I can build and publish it to PyPI using the aforementioned setup.
 This is precisely what I did with [go-bin](https://github.com/jmelahman/go-bin).
 Go maintainers graciously supply prebuilt artifacts anyways, so I just needed to ensure it ran properly from inside a wheel.
 
@@ -257,12 +257,11 @@ Given [Go no longer supports multiple, c-shared libraries](https://www.youtube.c
 If nothing else, I think it's neat you can now run `go` directly with `uvx`,
 
 ```shell
-$ uvx --from=go-bin~=1.24 \
-  go version
+$ uvx --from=go-bin go version
 go version go1.24.5 linux/amd64
 ```
 
-One issue I did run into is that [PyPi limits individual packages to 100MB and projects to 10GB](https://docs.pypi.org/project-management/storage-limits/).
+One issue I did run into is that [PyPI limits individual packages to 100MB and projects to 10GB](https://docs.pypi.org/project-management/storage-limits/).
 The Go binary is somewhere around 80MB + each version has about 10 variations for various platform support.
 I've had to resort to supporting only a handful of Go versions otherwise after about a handful of versions I will run out of repository space. :/
 It makes sense from their perspective and I appreciate their platform regardless.
