--- a/blog/2.md
+++ b/blog/2.md
@@ -49,7 +49,7 @@ Pretty solid overall.
 
 To be fair, Go packaging is 95% complete and it is really good at what it does do.
 I personally have an extremely low pain tolerance for software and an extra 100ms will bother me if
-I know it could have been avoided..
+I know it could be avoided.
 Part of the issue is that I intentionally use low-end hardware because UX and accessibility matters
 a lot to me.
 For most use-cases, Go packaging is perfectly fine and requires minimal maintenance on the end of
